# alien

./: CMakeLists.txt  README.md
MindMap/: Statistics.xmind
source/EngineGpuKernels/: CMakeLists.txt  Definitions.h  Math.cuh  MuscleProcessor.cuh  SimulationFacade.h  TOs.h
source/EngineGpuKernels/CUDA/: AttackerProcessor.cuh  CMakeLists.txt  CellConnectionProcessor.cuh  ConstructorProcessor.cuh  DataAccessKernels.cuh  DataAccessKernelsLauncher.cu  DataAccessKernelsLauncher.cuh  DebugKernels.cuh  Definitions.cuh  DensityMap.cuh  DetonatorProcessor.cuh  EditKernels.cu  EditKernels.cuh  EditKernelsLauncher.cu  EditKernelsLauncher.cuh  FlowFieldKernels.cuh  GenomeDecoder.cuh  MaxAgeBalancer.cuh  MuscleProcessor.cuh  NerveProcessor.cuh  NeuronProcessor.cuh  Operations.cuh  Physics.cuh  ReconnectorProcessor.cuh  SelectionResult.cuh  SimulationCudaFacade.cu  SimulationCudaFacade.cuh  SimulationData.cu  SimulationData.cuh  SimulationKernels.cu  SimulationKernelsLauncher.cu  SimulationKernelsLauncher.cuh  SimulationStatistics.cuh  SpotCalculator.cuh  StatisticsKernels.cu  StatisticsKernels.cuh  StatisticsKernelsLauncher.cu  TestKernels.cu  TestKernelsLauncher.cu  TestKernelsLauncher.cuh  (+1 more)
source/EngineGpuKernels/CUDA/Base/: GarbageCollectorKernels.cuh  ObjectFactory.cuh
source/EngineGpuKernels/CUDA/Editor/: DataAccessKernels.cuh  DataAccessKernelsLauncher.cu  DataAccessKernelsLauncher.cuh  EditKernels.cu  EditKernels.cuh  EditKernelsLauncher.cu  EditKernelsLauncher.cuh  GarbageCollectorKernels.cuh  GarbageCollectorKernelsLauncher.cuh  Operations.cuh
source/EngineGpuKernels/CUDA/Processors/: AttackerProcessor.cuh  CellConnectionProcessor.cuh  CellFunctionProcessor.cuh  CellProcessor.cuh  ClusterProcessor.cuh  ConstructorProcessor.cuh  DetonatorProcessor.cuh  MuscleProcessor.cuh  MutationProcessor.cuh  NerveProcessor.cuh  ParticleProcessor.cuh  ReconnectorProcessor.cuh  SensorProcessor.cuh  TransmitterProcessor.cuh
source/EngineGpuKernels/CUDA/Rendering/: RenderingData.cuh  RenderingKernels.cu  RenderingKernels.cuh  RenderingKernelsLauncher.cuh
source/EngineGpuKernels/CUDA/Simulation/: Map.cuh  Object.cuh  ObjectFactory.cuh  Objects.cuh
source/EngineGpuKernels/CUDA/Statistics/: CustomStatisticsKernels.cu  CustomStatisticsKernels.cuh  SimulationMapStatistics.cuh  SimulationStatistics.cuh  StatisticsDataCache.cu  StatisticsDataCache.cuh  StatisticsKernels.cu  StatisticsKernels.cuh  StatisticsKernelsLauncher.cu  StatisticsKernelsLauncher.cuh  StatisticsService.cu  StatisticsService.cuh
source/EngineImpl/: AccessDataTOCache.h  DescriptionConverter.h  EngineWorker.cpp  EngineWorker.h
source/EngineInterface/: CMakeLists.txt  CellFunctionConstants.h  DataPointCollection.h  SerializerService.h  SimulationController.h  SimulationParameters.h  StatisticsConverterService.cpp
source/EngineInterface/Statistics/: DataPointCollection.h  MapStatistics.h  RawStatisticsData.h  StatisticsConverterService.cpp  StatisticsConverterService.h  StatisticsHistory.h  StatisticsParameters.cpp  StatisticsParameters.h
source/EngineTests/: StatisticsTests.cpp
source/Gui/: AboutDialog.cpp  ActivateUserDialog.cpp  AlienImGui.cpp  AutosaveWindow.cpp  BrowserWindow.cpp  CMakeLists.txt  CellFunctionStrings.h  CreateUserDialog.cpp  CreatorWindow.cpp  DeleteUserDialog.cpp  DisplaySettingsDialog.cpp  ExitDialog.cpp  FileTransferController.cpp  GenomeEditorWindow.cpp  GettingStartedWindow.cpp  GpuSettingsDialog.cpp  HelpStrings.h  ImageToPatternDialog.cpp  InspectorWindow.cpp  LogWindow.cpp  LoginDialog.cpp  MainLoopController.cpp  MassOperationsDialog.cpp  MultiplierWindow.cpp  NetworkSettingsDialog.cpp  NewSimulationDialog.cpp  NewSimulationDialog.h  PatternAnalysisDialog.cpp  PatternEditorWindow.cpp  RadiationSourcesWindow.cpp  ResetPasswordDialog.cpp  ResizeWorldDialog.cpp  SelectionWindow.cpp  ShaderWindow.cpp  SimulationParametersWindow.cpp  SpatialControlWindow.cpp  StatisticsWindow.cpp  StatisticsWindow.h  StyleRepository.cpp  StyleRepository.h  (+4 more)
